deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nodeproject-dev
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: nodeproject-dev
  name: node-app-deployment
spec:
  selector:
    matchLabels:
      app: node-app
  replicas: 1
  template:
    metadata:
      labels:
        app: node-app
    spec:
      containers:
      - image: pratheeshsatheeshkumar/nodeapp:$GITHUB_SHA
        imagePullPolicy: Always
        name: node-app
        ports:
        - containerPort: 2000
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  namespace: nodeproject-dev
  name: node-app-service
spec:
  ports:
    - port: 80
      targetPort: 2000
      protocol: TCP
  type: NodePort
  selector:
    app: node-app
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: nodeproject-dev
  name: node-app-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  #  alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-2:905418455397:certificate/79a695f2-b258-43d9-a76d-96ccc0747a74  # Update with your ACM certificate ARN
  #  alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: node-app-service
                port:
                  number: 80
